--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
 }
 .main-text {
     color: #63444C;
-    font-size: 25px;
+    font-size: 26px;
     font-weight: bold;
     line-height: 30px;
 }
@@ -88,6 +88,63 @@ body {
     font-size: 15px;
     line-height: 30px;
 }
+.contact{
+    height: 100vh;
+    width: -200px;
+    background-image: url(../img/pix4.png);  
+    background-color: rgba(51, 51, 51, 0.801);
+    background-size: cover;
+    background-position: top;
+    background-blend-mode: darken; 
+}
+.main-one {
+    font-size: 36px;
+    line-height: 54px;
+    font-weight: 600;
+    padding: 150px 10px 0px 50px;
+    /* padding-left: 10px;
+    padding-bottom: 10px;
+    padding-top: 70px;
+    margin-left: 20px;
+    margin-top: 30px; */
+}
+.main-two {
+    margin-left: 50px;
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 500;
+    color: #B6948F;
+}
+.main-sub{
+    margin-left: 50px;
+}
+.mini-sub {
+    padding-left: 70px;
+}
+.info {
+    padding-top: 200px;
+    padding-left: 40px;
+}
+.main-small {
+    color: #B6948F;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
