--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,11 @@ body {
 .main-small {
     color: #B6948F;
 }
-
+.offers {
+    padding-top: 70px;
+    text-align: center;
+    color: #000;
+}
 
 
 
