--- a/css/style.css
+++ b/css/style.css
@@ -211,15 +211,19 @@ body {
     margin: 0;
     padding-top: 4px;
 }
-.foot{
-    height: 100vw;
-    width: 100%;
-    background-image: url(../img/Mask\ Group.png);
+  #footer{
+     color:#fff;
+    height: 300px;
+    margin-top: 100px;
+    background-image: url(../img/footer.png);
     background-size: cover;
-    -ms-transform: rotate3d(360deg);
-    transform: rotate(360deg);
+    transform: skew(0deg, 0deg) translateY(-79px);
+} 
+.foot {
+    text-align: center;
+    padding-top: 100px;
+    left: 200px;
 }
-
 
 
 
