--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,10 @@ body {
     padding-top: 100px;
     left: 200px;
 }
+/* .icons{
+    display: inline-block;
+    background-color:;
+} */
 
 
 
